--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,3 @@
 shamefully-hoist=true
-strict-peer-dependencies=false
-shell-emulator=true
-# fix code ERESOLVE \n ERESOLVE could not resolve
-legacy-peer-deps=true
+node-linker=hoisted
+public-hoist-pattern=*
